--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@sparticuz/chromium": "^119.0.0",
-    "puppeteer-core": "^22.4.1"
+    "@sparticuz/chromium": "119.0.0",
+    "puppeteer-core": "19.11.1"
   }
 }
